added buttons for the digits & operators in the HTML

--- a/index.html
+++ b/index.html
@@ -9,9 +9,63 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
+        <div id="display">
+            1 2 3 4 5 6 7 
+        </div>
+        <div id="operators">
+            <button id="plus">
+                +
+            </button>
+            <button id="minus">
+                -
+            </button>
+            <button id="multi">
+                *
+            </button>
+            <button id="divide">
+                /
+            </button>
+            <button id="equals">
+                =
+            </button>
+            <button id="clear">
+                Clear
+            </button>
+        </div>
+        <div id="numbers">
+            <button class="digits">
+                0
+            </button>
+            <button class="digits">
+                1
+            </button>
+            <button class="digits">
+                2
+            </button>
+            <button class="digits">
+                3
+            </button>
+            <button class="digits">
+                4
+            </button>
+            <button class="digits">
+                5
+            </button>
+            <button class="digits">
+                6
+            </button>
+            <button class="digits">
+                7
+            </button>
+            <button class="digits">
+                8
+            </button>
+            <button class="digits">
+                9
+            </button>
 
-
+        </div>
     </div>
     
 </body>
