added ids to the button tags & created foreach loop in js to attach onclick eventhandlers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <div id="container">
         <div id="display">
-            ''
         </div>
         <div id="operators">
             <button id="plus">
@@ -34,34 +33,34 @@
             </button>
         </div>
         <div id="numbers">
-            <button class="digits">
+            <button class="digits" id="0">
                 0
             </button>
-            <button class="digits">
+            <button class="digits" id="1">
                 1
             </button>
-            <button class="digits">
+            <button class="digits" id="2">
                 2
             </button>
-            <button class="digits">
+            <button class="digits" id="3">
                 3
             </button>
-            <button class="digits">
+            <button class="digits" id="4">
                 4
             </button>
-            <button class="digits">
+            <button class="digits" id="5">
                 5
             </button>
-            <button class="digits">
+            <button class="digits" id="6">
                 6
             </button>
-            <button class="digits">
+            <button class="digits" id="7">
                 7
             </button>
-            <button class="digits">
+            <button class="digits" id="8">
                 8
             </button>
-            <button class="digits">
+            <button class="digits" id="9">
                 9
             </button>
 
