function to display the array of operator buttons clicked on

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div id="display">
         </div>
         <div id="operators">
-            <button id="plus">
+            <button id="+">
                 +
             </button>
-            <button id="minus">
+            <button id="-">
                 -
             </button>
-            <button id="multi">
+            <button id="*">
                 *
             </button>
-            <button id="divide">
+            <button id="/">
                 /
             </button>
-            <button id="equals">
+            <button id="=">
                 =
             </button>
             <button id="clear">
