--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
                 /
             </button>
         </div>
+        <div id="equalsClear">
             <button id="=">
                 =
             </button>
             <button id="clear">
                 Clear
             </button>
+        </div>
         <div id="numbers">
             <button class="digits" id="0">
                 0
