--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); </style>
 </head>
 <body>
     <div id="container">
