added an intial string inside the display

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="container">
         <div id="display">
+            CALCULATOR
         </div>
         <div id="equalsClear">
             <button id="=">
