--- a/index.html
+++ b/index.html
@@ -23,20 +23,7 @@
                 Clear
             </button>
         </div>
-        <div id="operators">
-            <button id="+">
-                +
-            </button>
-            <button id="-">
-                -
-            </button>
-            <button id="*">
-                *
-            </button>
-            <button id="/">
-                /
-            </button>
-        </div>
+        <div id="pad">
         <div id="numbers">
             <button class="digits" id="1">
                 1
@@ -69,6 +56,21 @@
                 0
             </button>
 
+        </div>
+        <div id="operators">
+            <button id="+">
+                +
+            </button>
+            <button id="-">
+                -
+            </button>
+            <button id="*">
+                *
+            </button>
+            <button id="/">
+                /
+            </button>
+        </div>
         </div>
     </div>
     
