aligned to the right

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="container">
         <div id="display">
-            CALCULATOR
+           MY CALCULATOR
         </div>
         <div id="equalsClear">
             <button id="=">
